tools/archive/academy/.fluxless/envoy/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  annotations:
    io.cilium/lb-ipam-ips: "10.11.0.101"
    service.kubernetes.io/load-balancer-class: "io.cilium/bgp-control-plane"
spec:
  gatewayClassName: nginx
  listeners:
    - hostname: httpbin.chancey.dev
      name: httpbin-local-https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: chancey-dev-tls
            kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-httpbin
spec:
  hostnames:
    - httpbin.chancey.dev
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: httpbin
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
